--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -46,6 +46,14 @@ fra:
       x_seconds:
         many: '{{count}} secondes'
         one: '1 seconde'
+  dyta:
+    export:
+      csv: 'CSV'
+      false_value: 'FAUX'
+      title: 'Export'
+      true_value: 'VRAI'
+      xcsv: 'CSV pour Excel'
+    no_records: 'Aucun enregistrement'
   general:
     add: 'Ajouter'
     apply: 'Appliquer'
@@ -65,13 +73,6 @@ fra:
     down: 'Descendre'
     duplicate: 'Dupliquer'
     duration: '{{hours}}h {{minutes}}min'
-    dyta:
-      export:
-        csv: 'CSV'
-        false_value: 'FAUX'
-        title: 'Export'
-        true_value: 'VRAI'
-        xcsv: 'CSV pour Excel'
     edit: 'Modifier'
     example: 'Exemple&nbsp;: {{value}}'
     export: 'Exporter'
@@ -450,6 +451,8 @@ fra:
       purchase: 'Achat'
       to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     purchase_order_line:
+      name: '{{product}} ({{quantity}}{{unit}}) à {{amount}}{{currency}}/{{unit}}'
+      name_with_tracking: '{{product}}/{{tracking}} ({{quantity}}{{unit}}) à {{amount}}{{currency}}/{{unit}}'
       tracking: 'N°Lot : {{serial}}'
     purchase_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
