--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -85,7 +85,6 @@ jpn:
         #>currency_credit: 'Crédit'
         #>currency_debit: 'Débit'
         #>debit: 'Débit'
-        #>entries: 'Écritures'
         id: '唯一の番号'
         #>journal_entries: 'Écritures'
         lock_version: '修正の番号'
@@ -224,8 +223,8 @@ jpn:
         #>sale_payment_parts: 'Parties de règlement'
         #>sale_payments: 'Règlements'
         #>sales_conditions: 'Conditions Générales de Vente'
-        #>self_bank_accounts: '(((SELF_BANK_ACCOUNTS)))'
-        #>self_cashes: 'Comptes bancaires en propre'
+        #>self_bank_accounts: 'Comptes bancaires en propre'
+        #>self_cashes: 'Caisses en propre'
         #>self_contacts: 'Contacts en propre'
         #>sequences: 'Séquences'
         #>shapes: 'Îlots'
@@ -251,7 +250,7 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>usable_purchase_payments: '(((USABLE_PURCHASE_PAYMENTS)))'
+        #>usable_purchase_payments: 'Règlements d''achats utilisables'
         #>usable_sale_payments: 'Règlements de vente utilisables'
         #>users: 'Utilisateurs'
       complement:
@@ -420,7 +419,6 @@ jpn:
         #>mode: 'Type'
         #>mode_id: 'Type'
         #>moved_on: 'Faite le'
-        #>nature: 'Type'
         #>order: 'Vente'
         #>order_id: 'Vente'
         #>planned_on: 'Prévue le'
@@ -543,8 +541,6 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>default: 'Par défaut'
-        #>deleted: 'Supprimé'
         #>documents: 'Documents'
         #>family: 'Module'
         #>family_label: 'Module'
@@ -585,7 +581,6 @@ jpn:
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>validated: 'Valider'
       entity:
         #>active: 'Actif'
         #>activity_code: 'Code d''activité'
@@ -639,8 +634,6 @@ jpn:
         #>payment_delay_id: 'Délai de paiement'
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_id: 'Mode de règlement'
-        #>payments: 'Règlements'
-        #>payments_number: 'Nombre de paiements'
         #>photo: 'Photo'
         #>prices: 'Prix'
         #>proposer: 'Parrain'
@@ -727,7 +720,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       entity_nature:
-        #>abbreviation: 'Abréviation'
         #>active: 'Actif'
         company: '会社'
         company_id: '会社'
@@ -813,16 +805,14 @@ jpn:
         id: '唯一の番号'
         #>journal_records: 'Pièces comptables'
         lock_version: '修正の番号'
-        #>records: 'Pièces comptables'
         #>started_on: 'Commencé le'
         #>stopped_on: 'Date de clôture'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
-        #>written_on: 'Autoriser l''écriture jusqu''au'
       inventory:
         #>accounted_at: 'Comptabilisé le'
-        #>changes_reflected: 'Refleter les changements'
+        #>changes_reflected: 'Refléter les changements'
         comment: 'メモ'
         company: '会社'
         company_id: '会社'
@@ -830,8 +820,6 @@ jpn:
         #>created_on: 'Effectué le'
         creator: '創始者'
         creator_id: '創始者'
-        #>date: 'Créé le'
-        #>employee_id: 'Responsable'
         id: '唯一の番号'
         #>lines: 'Lignes d''inventaire'
         lock_version: '修正の番号'
@@ -866,7 +854,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       invoice:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant HT'
         #>amount_with_taxes: 'Montant TTC'
@@ -886,7 +873,6 @@ jpn:
         #>currency_id: 'Devise'
         #>deliveries: 'Livraisons'
         #>downpayment_amount: 'Montant de l''acompte'
-        #>facture: 'Facture'
         #>has_downpayment: 'A un acompte'
         id: '唯一の番号'
         #>lines: 'Lignes de facture'
@@ -900,7 +886,6 @@ jpn:
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
         #>payment_on: 'A régler au plus tard le'
-        #>sale: 'Vente'
         #>sale_order: 'Vente'
         #>sale_order_id: 'Vente'
         #>updated_at: 'Mis à jour le'
@@ -952,7 +937,6 @@ jpn:
         creator_id: '創始者'
         #>currency: 'Devise'
         #>currency_id: 'Devise'
-        #>deleted: 'Effacé'
         #>entries: 'Écritures'
         id: '唯一の番号'
         lock_version: '修正の番号'
@@ -976,29 +960,20 @@ jpn:
         creator: '創始者'
         creator_id: '創始者'
         #>credit: 'Crédit'
-        #>currency: 'Devise'
         #>currency_credit: 'Crédit'
         #>currency_debit: 'Débit'
-        #>currency_id: 'Devise'
-        #>currency_rate: 'Taux de change'
         #>debit: 'Débit'
-        #>draft: 'Brouillon'
-        #>editable: 'Éditable'
+        #>draft: 'Brouillard'
         #>expired_on: 'Expire le'
         id: '唯一の番号'
-        #>intermediate: 'Relevé de compte intermédiaire'
-        #>intermediate_id: 'Relevé de compte intermédiaire'
         #>journal: 'Journal'
         #>journal_id: 'Journal'
         #>letter: 'Lettre'
         lock_version: '修正の番号'
         name: '名前'
-        #>number_account: 'Nber'
         #>position: 'Position'
         #>record: 'Pièce comptable'
         #>record_id: 'Pièce comptable'
-        #>statement: 'Relevé de compte'
-        #>statement_id: 'Relevé de compte'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
@@ -1031,7 +1006,6 @@ jpn:
         #>resource: 'Origine'
         #>resource_id: 'Origine'
         #>resource_type: 'Origine'
-        #>status: 'État'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
@@ -1150,7 +1124,6 @@ jpn:
         #>entity: 'Fiche'
         #>entity_id: 'Fiche'
         #>family: 'Famille'
-        #>group: 'Groupe'
         id: '唯一の番号'
         lock_version: '修正の番号'
         #>organization: 'Organisation'
@@ -1185,7 +1158,6 @@ jpn:
         creator_id: '創始者'
         #>description: 'Description'
         #>duration: 'Durée'
-        #>employee_id: 'Employé'
         #>hour_duration: 'Heure(s)'
         id: '唯一の番号'
         #>lines: 'Intrants/sortants'
@@ -1198,7 +1170,6 @@ jpn:
         #>planned_on: 'Prévu le'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
-        #>shape_id: 'Îlot'
         #>started_at: 'Du'
         #>stopped_at: 'Au'
         #>target: 'Parcelle'
@@ -1211,7 +1182,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
         #>uses: 'Matériels utilisés'
-        #>validated: 'Effectué'
       operation_line:
         #>area_unit: 'Unité de surface'
         #>area_unit_id: 'Unité de surface'
@@ -1292,15 +1262,12 @@ jpn:
         creator_id: '創始者'
         #>currency: 'Devise'
         #>currency_id: 'Devise'
-        #>default: 'Par défaut'
         #>delivery_lines: 'Lignes de livraison'
         #>entity: 'Fournisseur'
         #>entity_id: 'Fournisseur'
         id: '唯一の番号'
         #>invoice_lines: 'Lignes de facture'
-        #>list_id: 'Liste de prix'
         lock_version: '修正の番号'
-        #>price: 'Prix'
         #>product: 'Produit'
         #>product_id: 'Produit'
         #>purchase_order_lines: 'Lignes d''achat'
@@ -1319,7 +1286,6 @@ jpn:
         #>use_range: 'Utiliser un intervalle de quantité'
       product:
         #>active: 'Utilisable'
-        #>actual_number: 'Numéro en cours'
         #>catalog_description: 'Description pour le catalogue'
         #>catalog_name: 'Nom pour le catalogue'
         code: 'コード'
@@ -1372,7 +1338,6 @@ jpn:
         #>subscription_period: 'Période'
         #>subscription_quantity: 'Quantité'
         #>subscriptions: 'Abonnement'
-        #>supply_method: 'Moyen d''approvisionnement'
         #>to: 'Pour'
         #>trackings: 'Lots traçables'
         #>unit: 'Unité de mesure'
@@ -1566,7 +1531,6 @@ jpn:
         updater_id: '修正の人'
         #>users: 'Utilisateurs'
       sale_order:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant HT'
         #>amount_with_taxes: 'Montant TTC'
@@ -1653,7 +1617,6 @@ jpn:
         #>price: 'Produit tarifé'
         #>price_amount: 'Montant HT'
         #>price_id: 'Produit tarifé'
-        #>price_list_id: 'Tarif'
         #>product: 'Produit'
         #>product_id: 'Produit'
         #>quantity: 'Quantité'
@@ -1692,7 +1655,6 @@ jpn:
         #>payment_mode: 'Mode de règlement'
         #>payment_mode_complement: 'Complément d''information sur le mode règlement'
         #>payment_mode_id: 'Mode de règlement'
-        #>payment_type: 'Type de paiement'
         #>sale_orders: 'Ventes'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -1774,8 +1736,6 @@ jpn:
         #>expense_id: 'Dépense'
         #>expense_type: 'Type de dépense'
         id: '唯一の番号'
-        #>invoice: 'Facture'
-        #>invoice_id: 'Facture'
         lock_version: '修正の番号'
         #>payment: 'Règlement'
         #>payment_id: 'Règlement'
@@ -1826,7 +1786,6 @@ jpn:
         parent: '親戚'
         parent_id: '親戚'
         #>polygon: 'Coordonnées'
-        #>shape_id: 'Îlot maître'
         #>shapes: 'Îlots'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -1888,7 +1847,6 @@ jpn:
         creator_id: '創始者'
         #>generated: 'Généré'
         id: '唯一の番号'
-        #>input: 'Entrée'
         #>location: 'Lieu de stockage'
         #>location_id: 'Lieu de stockage'
         lock_version: '修正の番号'
@@ -1920,7 +1878,6 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>executed: 'Réalisé'
         id: '唯一の番号'
         #>location: 'Lieu de stockage de départ'
         #>location_id: 'Lieu de stockage de départ'
@@ -1942,7 +1899,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       subscription:
-        #>beginning: 'Débute le'
         comment: 'メモ'
         company: '会社'
         company_id: '会社'
@@ -2008,9 +1964,7 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>deleted: 'Effacé'
         #>description: 'Description'
-        #>group_name: 'Groupe'
         id: '唯一の番号'
         #>included: 'Incluse'
         lock_version: '修正の番号'
@@ -2042,7 +1996,6 @@ jpn:
         id: '唯一の番号'
         lock_version: '修正の番号'
         #>nature: 'Régime de la déclaration'
-        #>normal: 'Réel normal'
         #>paid_amount: 'TVA déductible'
         #>paid_on: ''
         #>period: 'Période'
@@ -2183,9 +2136,6 @@ jpn:
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
-        #>credits: 'Création d''avoirs'
-        #>deleted: 'Effacé'
-        #>deleted_at: 'Supprimé à'
         #>departed_on: 'Parti le'
         #>department: 'Département'
         #>department_id: 'Département'
@@ -2196,7 +2146,6 @@ jpn:
         #>establishment_id: 'Établissement'
         #>events: 'Évènements'
         #>first_name: 'Prénom'
-        #>free_price: 'Prix libres'
         #>full_name: 'Nom complet'
         #>future_events: 'Evènements futurs'
         #>hashed_password: 'Mot de passe crypté'
