--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -9,6 +9,7 @@ fra:
       all_accounts: 'Tous les comptes'
       all_periods: 'Tous les exercices'
       month_period: '{{code}} - {{month}} {{year}}'
+      view_draft_entries: 'Brouillard'
       view_entries: 'Écritures'
       view_mixed: 'Pièces et écritures'
       view_records: 'Pièces'
@@ -31,7 +32,7 @@ fra:
       accountize:
         cashed_payments: 'Inclure les règlements non encaissés' #!
         dont_save_in_draft: 'Ne pas sauvegarder dans le brouillard'
-        draft_generate: 'Enregistrer dans le brouillon' #!
+        draft_generate: 'Enregistrer dans le brouillard' #!
         invoices_count: 'Nombre de factures de vente à comptabiliser'
         nb_invoices: 
           one: '1 facture enregistrée'
@@ -208,12 +209,13 @@ fra:
         title: 'Déclôture du {{name}}'
       journal_update:
         title: 'Modifier le journal : {{name}}'
+      _journals:
+        draft: 'Brouillard'
+        journal_detail: 'Cloturé au {{closed_on}}'
+        journal_name: '{{name}}'
       journals:
         title: 'Journaux'
         #>journal_create: # Potentially missing translation
-      _journals:
-        journal_detail: 'Cloturé au {{closed_on}}'
-        journal_name: '{{name}}'
       # Unfound view ./app/views/accountancy/_journals_find
       _journals_find:
         journal_id: 'Numéro de journal'
@@ -229,15 +231,15 @@ fra:
         dates: 'Saisissez les dates de début et de fin de la période'
         from: 'Période du'
         to: 'Au'
+      # Unfound view ./app/views/accountancy/_print_balance_sheet
+      _print_balance_sheet:
+        balance_sheet: 'Sélectionnez l''exercice'
+        select_financialyear: 'Exercice'
       # No defined action for this view !!!
       # Unfound view ./app/views/accountancy/print_balance_sheet
       print_balance_sheet:
         period: 'Période'
         title: 'Impression du bilan'
-      # Unfound view ./app/views/accountancy/_print_balance_sheet
-      _print_balance_sheet:
-        balance_sheet: 'Sélectionnez l''exercice'
-        select_financialyear: 'Exercice'
       # No defined action for this view !!!
       # Unfound view ./app/views/accountancy/print_by_financial_year
       print_by_financial_year:
